Remove some pointless config defaults